--- a/DW/2-intermedio/12.asincronismo-js/resources/code/asincronismo/package.json
+++ b/DW/2-intermedio/12.asincronismo-js/resources/code/asincronismo/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "callback": "node src/callback/8.xmlhttprequest.js"
   },
   "keywords": [],
   "author": "",
