--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,8 @@
 {
   "defaultViewMode": "preview",
   "showLineNumber": false,
-  "livePreview": false
+  "livePreview": false,
+  "spellcheckDictionary": [
+    "atrás"
+  ]
 }
