Dom + lazy loading

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,7 +4,8 @@
   "livePreview": false,
   "spellcheckDictionary": [
     "atrás",
-    "Pair"
+    "Pair",
+    "loading"
   ],
   "vimMode": true
 }
